--- a/style.css
+++ b/style.css
@@ -143,7 +143,18 @@ h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+@media screen and (max-width: 768px) { /* Ajusta este valor según tus necesidades */
+  #header h1 {
+    font-size: 24px; /* Reduce el tamaño del título */
+    margin-top: 10px; /* Reduce el margen superior si es necesario */
+    margin-bottom: 10px; /* Reduce el margen inferior si es necesario */
+  }
 
+  #header {
+    height: auto; /* Ajusta la altura del encabezado para que se adapte al nuevo tamaño del título */
+    padding: 10px 0; /* Ajusta el relleno para mantener el contenido centrado */
+  }
+}
 #header {
   height: 90px;
   padding: 25px 0;
