--- a/style.css
+++ b/style.css
@@ -1611,3 +1611,25 @@ body.mobile-nav-active #mobile-nav-toggle {
 .details {
     margin-top: 15px; /* Space between image and details */
 }
+.speaker img {
+    height: 300px;
+    width: auto;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto; /* Centers the image */
+}
+
+.col-lg-4, .col-md-6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* This will center the content of columns */
+}
+
+.speaker {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.details {
+    margin-top: 15px;
+}
