--- a/style.css
+++ b/style.css
@@ -697,7 +697,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /*--------------------------------------------------------------
 # Speakers Section
 --------------------------------------------------------------*/
-
+/*
 #speakers {
  padding: 60px 0 30px 0
 }
@@ -790,6 +790,8 @@ body.mobile-nav-active #mobile-nav-toggle {
  font-size: 15px;
  margin-bottom: 10px
 }
+
+*/
 
 /*--------------------------------------------------------------
 # Schedule Section
