--- a/style.css
+++ b/style.css
@@ -892,6 +892,12 @@
   }, false);
 </script>
 
+.speaker-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%; /* O el porcentaje/ancho fijo deseado */
+}
 
 </body>
 
