--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@
                     <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Dra. Flor Arriaga" class="img-fluid">
                     <div class="details">
                         <h3><a href="speaker-details.html">Dra. Flor Arriaga</a></h3>
-                        <!-- Additional details for Dra. Flor Arriaga -->
+                         <p>con especialidad en Estomatología Pediátrica a nivel de residencia hospitalaria</p>
                         <!-- Social Media Icons -->
                     </div>
                 </div>
