--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,41 +147,34 @@ h6 {
   right: 0;
   transition: all 0.5s;
   z-index: 997;
+  display: flex; /* Asegurar alineación vertical */
+  align-items: center; /* Centrar elementos verticalmente */
+  justify-content: space-between; /* Espaciado entre logo y navegación */
+  padding: 0 20px; /* Agregar un poco de padding a los lados */
 }
 
 #header.header-scrolled,
 #header.header-inner {
   background: rgba(6, 12, 34, 0.98);
-  height: 70px;
+  height: 70px; /* Ajustar la altura cuando se desplaza */
 }
 
 #header #logo h1 {
-  font-size: 36px;
-  margin: 0;
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-}
-
-#header #logo h1 span {
-  color: #f82249;
-}
-
-#header #logo h1 a,
-#header #logo h1 a:hover {
-  color: #fff;
+  font-size: 0; /* Ocultar el texto si está utilizando imagen */
 }
 
 #header #logo img {
-  padding: 0;
-  margin: 0;
-  max-height: 40px;
+  max-height: 40px; /* Ajustar según el diseño preferido */
+  transition: max-height 0.3s ease-in-out; /* Suavizar transición al cambiar de tamaño */
 }
 
 @media (max-width: 992px) {
+  #header {
+    height: 70px; /* Reducir altura en dispositivos móviles */
+  }
+
   #header #logo img {
-    max-height: 30px;
+    max-height: 30px; /* Reducir el tamaño del logo en dispositivos móviles */
   }
 }
 
