--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,32 +187,31 @@ h6 {
 
 
 --------------------------------------------------------------*/
-.buy-tickets {
+.buy- {
   color: #fff;
   background: #f82249;
-  padding: 7px 22px;
-  margin: 0 0 0 15px;
+  padding: 10px 25px; /* Ajustado para dar más espacio alrededor del texto */
+  margin: 10px auto; /* Ajustado para centrar el botón y agregar espacio superior */
   border-radius: 50px;
   border: 2px solid #f82249;
   transition: all ease-in-out 0.3s;
   font-weight: 500;
   line-height: 1;
-  font-size: 13px;
+  font-size: 15px; /* Aumentado para mejorar la legibilidad */
   white-space: nowrap;
+  display: block; /* Cambio a block para permitir el margen auto */
+  text-align: center; /* Asegura que el texto dentro del botón esté centrado */
 }
 
-.buy-tickets:hover {
-  background: none;
-  color: #fff;
-}
-
-.buy-tickets:focus {
-  color: #fff;
+.buy-tickets:hover, .buy-tickets:focus {
+  background: #fff; /* Cambio para contraste al hacer hover */
+  color: #f82249; /* Cambio de color para mejorar la visibilidad */
+  border: 2px solid #f82249; /* Mantener el borde consistente */
 }
 
 @media (max-width: 992px) {
   .buy-tickets {
-    margin: 0 15px 0 0;
+    margin: 10px 15px; /* Ajustado para mantener la consistencia en responsive */
   }
 }
 
